--- a/src/app/components/categoria/categoria-list/categoria-list.component.html
+++ b/src/app/components/categoria/categoria-list/categoria-list.component.html
@@ -1,16 +1,31 @@
-<div class="categoria-container">
+<div class="categoria-container mt-4">
+  Lista de Categorias
+  <div class="row">
     @for (categoria of pCategoriaList; track categoria) {
-      <div class="categoria-item">
-       
-        <h2>Categoria: {{categoria.nombre}}</h2>
-        <h3>Descripción: {{categoria.descripcion}}</h3>
-    
-        @if (areActionsAvailable) {
-          <button (click)="callUpdateModalMethod.emit(categoria)" class="btn btn-success">Actualizar</button>
-          <button  (click)="callDeleteMethod.emit(categoria)" class="btn btn-danger">Eliminar</button>
-        }
+      <div class="col-md-6 col-lg-4 mb-4">
+        <div class="card shadow-sm h-100 border-0 rounded-3">
+          <div class="card-body">
+            <h5 class="card-title fs-6 fw-bold text-primary">Categoría: {{ categoria.nombre }}</h5>
+            <p class="card-text"><strong>Descripción:</strong> {{ categoria.descripcion }}</p>
+
+            @if (areActionsAvailable) {
+              <div class="d-flex justify-content-between mt-3">
+                <button
+                  (click)="callUpdateModalMethod.emit(categoria)"
+                  class="btn btn-outline-success btn-sm">Actualizar</button>
+                <button
+                  (click)="callDeleteMethod.emit(categoria)"
+                  class="btn btn-outline-danger btn-sm">Eliminar
+                </button>
+              </div>
+            }
+          </div>
+        </div>
       </div>
     } @empty {
-      <p>No hay categorias disponibles.</p>
+      <div class="col-12">
+        <p class="text-muted text-center">No hay categorías disponibles.</p>
+      </div>
     }
   </div>
+</div>
